cmake_minimum_required(VERSION 3.5)
project (upnp-tools-gtk)
add_executable (discover
  src/main.cpp)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_check_modules(PKG_OSLAYER REQUIRED oslayer)
pkg_check_modules(PKG_HTTP_SERVER REQUIRED http-server)
pkg_check_modules(PKG_UPNP_TOOLS REQUIRED upnp-tools)
pkg_check_modules(PKG_GTK REQUIRED gtk+-2.0)
include_directories(${PKG_OSLAYER_INCLUDE_DIRS})
include_directories(${PKG_HTTP_SERVER_INCLUDE_DIRS})
include_directories(${PKG_UPNP_TOOLS_INCLUDE_DIRS})
include_directories(${PKG_GTK_INCLUDE_DIRS})
target_link_libraries(discover Threads::Threads)
target_link_libraries(discover ${PKG_OSLAYER_LDFLAGS})
target_link_libraries(discover ${PKG_HTTP_SERVER_LDFLAGS})
target_link_libraries(discover ${PKG_UPNP_TOOLS_LDFLAGS})
target_link_libraries(discover ${PKG_GTK_LDFLAGS})
target_link_libraries(discover ${CMAKE_DL_LIBS})
